ExtendedFooter spacing fix

--- a/src/theme/Footer/ExtendedFooter/ExtendedFooter.module.scss
+++ b/src/theme/Footer/ExtendedFooter/ExtendedFooter.module.scss
@@ -1,75 +1,83 @@
 @use "../../../assets/scss/variables/media-queries";
 @import "../../../assets/scss/mixins";
 
-.footer_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 50vh;
-    gap: 10px;
-    background-color: var(--black);
-
-    &_upperData {
-        position: relative;
-        width: 100%;
-        height: 100%;
+.footer_wrapper {
+    padding: 0 20px;
+    
+    .footer_container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
-        padding: 45px 0;
+        align-items: center;
+        min-height: 50vh;
+        gap: 10px;
+        background-color: var(--black);
+        margin-right: 20px;
+        margin-left: 20px;
+        max-width: var(--maxContentWidth);
+        width: 100%;
 
-        &_social {
+        &_upperData {
             position: relative;
-            width: 60%;
+            width: 100%;
             height: 100%;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-            gap: 27px;
-            padding-right: 20px;
+            padding: 45px 0;
 
-            &_description {
-                padding-bottom: 8px;
-                max-width: 80%; //?? span-3?
-            }
-
-            .logoCasper {
+            &_social {
                 position: relative;
+                width: 60%;
+                height: 100%;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
-                align-items: center;
-                &_logo {
-                    min-width: 168px;
+                align-items: flex-start;
+                gap: 27px;
+                padding-right: 20px;
+
+                &_description {
+                    padding-bottom: 8px;
+                    max-width: 80%; //?? span-3?
+                }
+
+                .logoCasper {
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &_logo {
+                        min-width: 168px;
+                    }
                 }
             }
         }
-    }
-    &_bottomData {
-        position: relative;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 30px;
-        padding-bottom: 30px;
-        > a {
-            text-decoration: none;
-        }
-        a:link {
-            text-decoration: none;
-            color: var(--casperWhite);
-            font-weight: 500;
-            line-height: 24px;
-        }
-        a:visited {
-            color: var(--casperWhite);
-        }
-        a:hover {
-            @include transition(0.3s all);
-            color: var(--casperRed);
+        &_bottomData {
+            position: relative;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 30px;
+            padding-bottom: 30px;
+            > a {
+                text-decoration: none;
+            }
+            a:link {
+                text-decoration: none;
+                color: var(--casperWhite);
+                font-weight: 500;
+                line-height: 24px;
+            }
+            a:visited {
+                color: var(--casperWhite);
+            }
+            a:hover {
+                @include transition(0.3s all);
+                color: var(--casperRed);
+            }
         }
     }
 }
